--- a/FitTrack/app/src/main/res/layout/activity_main_workouts_info.xml
+++ b/FitTrack/app/src/main/res/layout/activity_main_workouts_info.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/rootlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivityWorkoutsInfo">
+    tools:context=".MainActivityWorkoutsInfo"
+    android:background="@drawable/fondoworkouts"
+
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,27 +22,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tituloWorkouts"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/imageYt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+            app:layout_constraintTop_toTopOf="@+id/guideline6" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="119dp"
             android:layout_height="46dp"
-            android:layout_marginTop="54dp"
             android:text="Volver"
+            android:backgroundTint="#716969"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageYt" />
+            app:layout_constraintTop_toTopOf="@+id/guideline7" />
 
         <TextView
             android:id="@+id/date"
-            android:layout_width="88dp"
-            android:layout_height="24dp"
+            android:layout_width="91dp"
+            android:layout_height="48dp"
             android:text=""
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/exerciseCompleted"
             app:layout_constraintEnd_toStartOf="@+id/imageYt"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +54,9 @@
             android:id="@+id/exerciseCompleted"
             android:layout_width="88dp"
             android:layout_height="24dp"
+            android:layout_marginBottom="30dp"
             android:text=""
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/button5"
             app:layout_constraintEnd_toStartOf="@+id/imageYt"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +67,7 @@
             android:layout_width="88dp"
             android:layout_height="24dp"
             android:text=""
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/workoutNivel"
             app:layout_constraintEnd_toStartOf="@+id/imageYt"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,6 +78,7 @@
             android:layout_width="88dp"
             android:layout_height="24dp"
             android:text=""
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/totalTIme"
             app:layout_constraintEnd_toStartOf="@+id/imageYt"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,6 +89,7 @@
             android:layout_width="88dp"
             android:layout_height="24dp"
             android:text=""
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/expectedTime"
             app:layout_constraintEnd_toStartOf="@+id/imageYt"
             app:layout_constraintHorizontal_bias="0.5"
@@ -90,20 +101,11 @@
             android:layout_width="88dp"
             android:layout_height="24dp"
             android:text=""
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/date"
             app:layout_constraintEnd_toStartOf="@+id/imageYt"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/totalTIme" />
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="409dp"
-            android:layout_height="154dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo" />
 
         <ImageView
             android:id="@+id/imageYt"
@@ -115,6 +117,20 @@
             app:layout_constraintStart_toEndOf="@+id/totalTIme"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:srcCompat="@drawable/ic_launcher_background" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="163dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="776dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
