Funciona el cambio de idioma en la ventana perfil, hay que agregar un metodo en cada una de las pantallas para que funcione tambien con ellas, el cambio de idioma

--- a/FitTrack/app/src/main/res/layout/activity_main_login.xml
+++ b/FitTrack/app/src/main/res/layout/activity_main_login.xml
@@ -28,7 +28,7 @@
             android:layout_marginTop="20dp"
             android:fontFamily="@font/adlam_display"
             android:gravity="center_horizontal|center_vertical"
-            android:text="@string/tituloLogin"
+            android:text="@string/tittleLogin"
             android:textColor="@color/white"
             android:textSize="40sp"
             android:textStyle="bold"
@@ -42,7 +42,7 @@
             android:layout_marginStart="40dp"
             android:layout_marginTop="60dp"
             android:fontFamily="@font/adlam_display"
-            android:text="@string/usuario"
+            android:text="@string/user"
             android:textColor="@color/white"
             android:textSize="30sp"
             app:layout_column="0"
@@ -100,7 +100,7 @@
             android:layout_marginStart="110dp"
             android:layout_marginTop="40dp"
             android:fontFamily="@font/adlam_display"
-            android:text="@string/recordar"
+            android:text="@string/rememberMe"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="16sp"
@@ -116,7 +116,7 @@
             android:layout_marginTop="40dp"
             android:backgroundTint="#716969"
             android:fontFamily="sans-serif"
-            android:text="@string/botonLogin"
+            android:text="@string/buttonLogin"
             android:textStyle="bold"
             app:layout_column="0"
             app:layout_row="6" />
@@ -129,7 +129,7 @@
             android:layout_marginTop="40dp"
             android:backgroundTint="#716969"
             android:fontFamily="sans-serif"
-            android:text="@string/botonDarseAlta"
+            android:text="@string/buttonReportFit"
             android:textStyle="bold"
             app:layout_column="0"
             app:layout_row="6" />
