--- a/FitTrack/app/src/main/res/layout/activity_perfil.xml
+++ b/FitTrack/app/src/main/res/layout/activity_perfil.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/adlam_display"
-        android:text="@string/tituloPerfil"
+        android:text="@string/tittleProfile"
         android:textColor="@color/white"
         android:textSize="48sp"
         android:textStyle="bold"
@@ -38,7 +38,7 @@
         android:layout_width="250dp"
         android:layout_height="37dp"
         android:fontFamily="@font/adlam_display"
-        android:text="@string/usuario"
+        android:text="@string/user"
         android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewUsuario"
@@ -52,7 +52,7 @@
         android:layout_width="250dp"
         android:layout_height="37dp"
         android:fontFamily="@font/adlam_display"
-        android:text="@string/nombre"
+        android:text="@string/name"
         android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewNombre"
@@ -78,7 +78,7 @@
         android:layout_width="270dp"
         android:layout_height="39dp"
         android:fontFamily="@font/adlam_display"
-        android:text="@string/fechaNacimiento"
+        android:text="@string/birthdate"
         android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewFechaNacimiento"
@@ -130,7 +130,7 @@
         android:layout_width="250dp"
         android:layout_height="36dp"
         android:fontFamily="@font/adlam_display"
-        android:text="@string/apellido"
+        android:text="@string/surname"
         android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewApellido"
@@ -157,7 +157,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/design_default_color_background"
         android:fontFamily="sans-serif"
-        android:text="@string/botonVolver"
+        android:text="@string/buttonBack"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -212,7 +212,7 @@
         android:text="Tema Claro"
         android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/spinner2"
+        app:layout_constraintBottom_toTopOf="@+id/spinnerChangeLanguage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/buttonVolverPerfil"
@@ -220,7 +220,7 @@
         tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml,VisualLintBounds" />
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/spinnerChangeLanguage"
         android:layout_width="123dp"
         android:layout_height="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
