--- a/FitTrack/app/src/main/res/layout/activity_registro.xml
+++ b/FitTrack/app/src/main/res/layout/activity_registro.xml
@@ -20,7 +20,7 @@
         android:id="@+id/textViewTituloRegistro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tituloRegistro"
+        android:text="@string/tittleRegister"
         app:layout_constraintBottom_toTopOf="@+id/textViewUsuarioRegistro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -31,7 +31,7 @@
         android:id="@+id/textViewUsuarioRegistro"
         android:layout_width="80dp"
         android:layout_height="20dp"
-        android:text="@string/usuario"
+        android:text="@string/user"
         app:layout_constraintBottom_toTopOf="@+id/textViewPasswordRegistro"
         app:layout_constraintEnd_toStartOf="@+id/textViewIngresarUsuarioRegistro"
         app:layout_constraintHorizontal_bias="0.5"
@@ -75,7 +75,7 @@
         android:id="@+id/textViewNombreRegistro"
         android:layout_width="80dp"
         android:layout_height="20dp"
-        android:text="@string/nombre"
+        android:text="@string/name"
         app:layout_constraintBottom_toTopOf="@+id/textViewApellidoRegistro"
         app:layout_constraintEnd_toStartOf="@+id/textViewIngresarNombreRegistro"
         app:layout_constraintHorizontal_bias="0.5"
@@ -97,7 +97,7 @@
         android:id="@+id/textViewApellidoRegistro"
         android:layout_width="80dp"
         android:layout_height="20dp"
-        android:text="@string/apellido"
+        android:text="@string/surname"
         app:layout_constraintBottom_toTopOf="@+id/textViewEmailRegistro"
         app:layout_constraintEnd_toStartOf="@+id/textViewIngresarApellidoRegistro"
         app:layout_constraintHorizontal_bias="0.5"
@@ -141,7 +141,7 @@
         android:id="@+id/textViewFechaNacimientoRegistro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fechaNacimiento"
+        android:text="@string/birthdate"
         app:layout_constraintBottom_toTopOf="@+id/spinner"
         app:layout_constraintEnd_toStartOf="@+id/textViewIngresarFechaNacimientoRegistro"
         app:layout_constraintHorizontal_bias="0.5"
@@ -173,7 +173,7 @@
         android:id="@+id/buttonVolver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/botonVolver"
+        android:text="@string/buttonBack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonRegister"
         app:layout_constraintHorizontal_bias="0.5"
@@ -184,7 +184,7 @@
         android:id="@+id/buttonRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/botonRegistro"
+        android:text="@string/buttonRegister"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
