Mejorando la maquetacion de la pantalla workouts y perfil

--- a/FitTrack/app/src/main/res/layout/activity_perfil.xml
+++ b/FitTrack/app/src/main/res/layout/activity_perfil.xml
@@ -223,6 +223,8 @@
         android:id="@+id/spinnerChangeLanguage"
         android:layout_width="123dp"
         android:layout_height="48dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonVolverPerfil"
