--- a/FitTrack/app/src/main/res/layout/item_historic.xml
+++ b/FitTrack/app/src/main/res/layout/item_historic.xml
@@ -18,4 +18,11 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:textColor="#1A1818" />
+
+    <TextView
+        android:id="@+id/exercises"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textColor="#1A1818" />
 </LinearLayout>
